# engineering-studio-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  COMMUNITY.md  CONTRIBUTION.md  LICENSE  LICENSE.md  README.md  SCAFFOLDING.md  SECURITY.md  isolate_fireworks_call.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py
.github/agents/: AGENTS.md  AGENT_CONTRACT.md  AGENT_REGISTRY.yaml  README.md  STANDARDS_ROUTER.yaml  STANDARDS_SUMMARY.md  documentation.agent.md  latex.agent.md  orchestrator.agent.md  quality-gate.agent.md  reviewer.agent.md  testing.agent.md  validator.agent.md
.github/agents/artifacts_management/: README.md  artifact-provenance-specialist.agent.md
.github/agents/assurance/: README.md  accessibility-ux-assurance.agent.md  evaluation-drift.agent.md
.github/agents/business/: README.md  cost-business-specialist.agent.md  legal-compliance-specialist.agent.md  product-strategy-specialist.agent.md
.github/agents/challenge-division/: README.md  cost-sustainability.agent.md  engineering-cross-domain-review.agent.md  failure-analysis.agent.md  paranoid-devils-advocate.agent.md  project-prosecutor.agent.md  red-team.agent.md  safety.agent.md  security.agent.md
.github/agents/config_management/: README.md  openai-config-specialist.agent.md
.github/agents/domain-specialists/: README.md  electrical-electronics-engineering-specialist.agent.md  firmware-specialist.agent.md  (+3 more)
.github/workflows/: ci.yml
OPEN_AI_DEV_WEEK_HACKATHON/: Codex_Chat_Record_19072026.md  Codex_Chat_Record_19072026_milestone_papers_update.md  INVESTIGATE.md  PLAN.md  PREPLAN.md  PROMPT.md  README_CODEX_USE.md  README_OPENAI_JUDGES.md
OPEN_AI_DEV_WEEK_HACKATHON/RULES_FAQ/: faq.md  rules.md
agents/: README.md
backend/: README.md
demo/: README.md  demo-script.md  demo_prompts.json  playwright_demo_script.py  run_demo_sequence.py
demo/_archive/: professional_video_demo.py  professional_video_overlay.js
deployment/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: E2E_EVIDENCE.md  JUDGES_GUIDE.md  PLAYWRIGHT_INTEGRATION_PLAN.md  PROMPT_2026-07-09_demo-one-more-round.md  RESPONSIBILITIES.md  TEAM_QA.md  VISION_AMD_LABLAB_HACKATHON_ENGINEERING_STUDIO.md  WISHLIST_2026-07-09_demo-one-more-round.md  task-specs.md
frontend/: README.md  app.js  downloads.js  index.html
frontend/styles/: app.css  downloads.css  theme.css
paper/: README.md  engineering_studio_ai_paper.tex  engineering_studio_ai_whitepaper_for_team_public.tex
paper/OPEN_AI_DEV_WEEK_HACKATHON/: chat_2026-07-19_overflow_toc_fix.md
paper/amd_hackathon_act_ii/: engineering_studio_ai_paper.tex
paper/openai_dev_week/: engineering_studio_ai_paper.tex  engineering_studio_ai_whitepaper_for_team_public.tex
presentation/: README.md  export_slides_to_png.py  slides-outline.md  slides.html  slides_png_to_pdf.py
research/: README.md  research-findings.md  technology-comparisons.md
run_scripts/: README.md  __init__.py  __main__.py  run_build_audit_coverage.py  run_build_devop_cicd.py  run_build_import_modules.py  run_build_import_third_party_dependencies.py  run_build_pipeline_reports.py  run_build_pypi_package.py  run_build_python_agnostic_executables.py  run_build_run_tests.py  run_build_venv.py  run_py_version_check.py
scripts/: README.md  pre_demo_check.py
src/engineering_studio/: __init__.py  cli.py  fireworks_client.py  runs.py  task_specs.py
tests/: test_api.py  test_api_models.py  test_cli.py  test_decorators.py  test_downloads.py  test_exceptions.py  test_fake_pipeline.py  test_fireworks_client.py  test_fireworks_client_complete.py  test_gui.py  test_models.py  test_orchestrator.py  test_palette.py  test_providers.py  test_runs.py  test_sdk.py  test_specialist_agent.py  test_task_specs.py  test_webapp.py
tests/e2e/: __init__.py  conftest.py  test_dashboard_render.py  test_pipeline_stream.py  test_theme_toggle.py
(+102 files in other folders)
