[project]
name = "engineering-studio-ai"
version = "0.1.0"
description = "Multi-agent Engineering Studio AI demo for the AMD LabLabAI Hackathon (Act II)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]
gui = [
    "textual>=0.58",
]
e2e = [
    "playwright>=1.45",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
addopts = "--cov=engineering_studio --cov-report=term-missing --cov-fail-under=100 --ignore=tests/e2e"

[tool.coverage.run]
source = ["engineering_studio"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
